# routes/author.js
@@ -5,10 +5,12 @@ const authorController = require('../controllers/authorShema');
 
 //Get all Authors
 router.get('/', authorController.getAllAuthors);
+
+//Create a new author
+router.post('/', authorController.createAuthor);
 //Get all Authors
 router.get('/:username', authorController.getSingleAuthor);
-//Create a new author
-router.post('/username', authorController.createAuthor);
+
 //Update a new author
 router.put('/:username', authorController.updateAuthor);
 
